update AB's demo

--- a/00_Burke/00_Burke.Rmd
+++ b/00_Burke/00_Burke.Rmd
@@ -19,14 +19,12 @@ Burke, Ariane, et al. 2014	Exploring the impact of climate variability during th
 ```{r}
 ## ----- Install  packages 
 require(car)  ## for vif (variance inflation test)
-# BM # devtools::install_github("palday/coefplot2", subdir = "pkg") # not on CRAN
+# BM # we can install coefplot2 from:
+# devtools::install_github("palday/coefplot2", subdir = "pkg") # or 
 # install.packages("coefplot2",repos="http://www.math.mcmaster.ca/bolker/R",     type="source")
 require(AICcmodavg) ## for AIC model selection
 require(MASS) ## for stepAIC
-require(ROCR) ## for AUC
 library(coefplot2) ## for coefficient plot.
-library(caret)
-library(e1071)
 ```
 
 
@@ -93,6 +91,11 @@ Absences <- subset(dat1, dat1$LGM == 0)[sample(c(1:dim(dat1)[1]), numAbsences),]
 
 ## ----- Final data on which analyses will be run
 dat2 <- rbind(Presences, Absences)
+
+	## ----- data table for forward selection (stepAIC)
+dat3 <- dat2[,c(2, 5, 6, 7, 8, 9, 10)]
+	## ----- View/check data
+head(dat3)
 ```
 
 ```{r}
@@ -100,14 +103,14 @@ dat2 <- rbind(Presences, Absences)
 
 ## ----- Define formulae
 form0 <- formula(LGM ~ 1) #intercept only model
-form1 <- formula(LGM ~ Y + X, data = dat2, family = binomial)
-form2 <- formula(LGM ~ elev + slope, data = dat2, family = binomial)
-form3 <- formula(LGM ~ t_min_y, data = dat2, family = binomial)
-form4 <- formula(LGM ~ elev + slope + p_min_spr, data = dat2, family = binomial)
-form5 <- formula(LGM ~ p_min_spr + t_min_y, data = dat2, family = binomial)
-form6 <- formula(LGM ~ t_avg_y + p_avg_y, data = dat2, family = binomial)
-form7 <- formula(LGM ~ elev + slope + t_avg_y + p_avg_y, data = dat2, family = binomial)
-form8 <- formula(LGM~ . - Name, data = dat2, family = binomial) ## all variables for step-wise procedure
+form1 <- formula(LGM ~ Y + X)
+form2 <- formula(LGM ~ elev + slope)
+form3 <- formula(LGM ~ t_min_y)
+form4 <- formula(LGM ~ elev + slope + p_min_spr)
+form5 <- formula(LGM ~ p_min_spr + t_min_y)
+form6 <- formula(LGM ~ t_avg_y + p_avg_y)
+form7 <- formula(LGM ~ elev + slope + t_avg_y + p_avg_y)
+form8 <- formula(LGM~ .) ## all variables for step-wise procedure
 ## all variables for step-wise procedure
 ```
 
@@ -122,7 +125,7 @@ mod.4  <-  glm(form4, family = binomial, data = dat2)
 mod.5  <-  glm(form5, family = binomial, data = dat2)
 mod.6  <-  glm(form6, family = binomial, data = dat2)
 mod.7  <-  glm(form7, family = binomial, data = dat2)
-mod.8 <-   stepAIC(glm(form8, family = binomial, data = dat2))
+mod.8 <-   stepAIC(glm(form8, family = binomial, data = dat3))
 ```
 
 
@@ -131,7 +134,15 @@ mod.8 <-   stepAIC(glm(form8, family = binomial, data = dat2))
 ```{r}
 ## ----- Summarize AIC results, including weightings. Using modaicavg package.
 mods <-
-  list(mod.0, mod.1, mod.2, mod.3, mod.4, mod.5, mod.6, mod.7, mod.8)
+  list(mod.0,
+       mod.1, 
+       mod.2, 
+       mod.3, 
+       mod.4, 
+       mod.5, 
+       mod.6, 
+       mod.7, 
+       mod.8)
 
 modnames <-
   c("mod.0",
@@ -145,30 +156,35 @@ modnames <-
   "mod.8")
 
 aictab(mods, modnames, second.ord = T)
-  
-selected <- rownames(summary(mod.8)$coefficients)[-1]
-  
-# paramsOut[xx, ] <- c(selected, rep(0, 10 - length(selected))) ##error here
-  
+
 summary(mod.8)
 ```
 
 ```{r}
 ## ---- Coefficient Plot for model 
 
-coefplot2(mod.8, main="Model 8", col='blue', cex.pts=1.3, intercept=F)
+
+coefplot2(mod.8,
+          main = "Model 8", 
+          col = 'blue', 
+          cex.pts = 1.3,
+          intercept = FALSE)
 
 ## ---- list coefficients
 rownames(summary(mod.8)$coefficients)
 ```
 
-```{r eval = FALSE}
+```{r}
 ## ---- Odds ratios and 95% CI
-ORs <- exp(cbind(OR = coef(mod.13), confint(mod.13)))[-1,] ## Intercept OR shouldn't be interpreted.
+ORs<- exp(cbind(OR = coef(mod.8), confint(mod.8)))[-1,] ## Intercept OR shouldn't be interpreted.
 ORs
 
 ## ----- Assess variance inflation (>5 is not good) 
-vif(mod.13)
+vif(mod.8)
 
 ```
 
+
+```{r}
+sessionInfo()
+```
